--- a/source/styles/components/hero-section.css
+++ b/source/styles/components/hero-section.css
@@ -64,12 +64,14 @@
   margin-bottom: 1em;
 }
 
-.HeroSection--actions > a:not(:last-child) {
-  margin-right: 1em;
+@media (max-width: 525px) {
+  .HeroSection--actions {
+    flex-wrap: wrap;
+  }
 }
 
-.HeroSection--download-actions {
-  margin-bottom: 0;
+.HeroSection--download-actions .Button {
+  margin: auto;
 }
 
 .HeroSection--scroll-indicator {
